Se han actualizado los nombres de los archivos para que no dependan de la regla my

--- a/src/googleWeb1-Ex.html
+++ b/src/googleWeb1-Ex.html
@@ -1,16 +1,16 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="components/my-googleWebComponents3.html">
+<link rel="import" href="components/googleWeb-Components1.html">
 
-<dom-module id="my-googleWeb3Ex">
+<dom-module id="googleWeb1-Ex">
   <!-- Defines the element's style and local DOM -->
   <template>
-    <my-googleWebComponents3></my-googleWebComponents3>
+    <googleWeb-Components1></googleWeb-Components1>
   </template>
   <!-- Creates the element's prototype and registers it -->
 
   <script>
     Polymer({
-      is: 'my-googleWeb3Ex'
+      is: 'googleWeb1-Ex'
     });
   </script>
 </dom-module>
