--- a/src/googleWeb2-Ex.html
+++ b/src/googleWeb2-Ex.html
@@ -1,16 +1,16 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="components/my-paper.html">
+<link rel="import" href="components/googleWeb-Components2.html">
 
-<dom-module id="my-paperEx">
+<dom-module id="googleWeb2-Ex">
   <!-- Defines the element's style and local DOM -->
   <template>
-    <my-paper></my-paper>
+    <googleWeb-Components2></googleWeb-Components2>
   </template>
   <!-- Creates the element's prototype and registers it -->
 
   <script>
     Polymer({
-      is: 'my-paperEx'
+      is: 'googleWeb2-Ex'
     });
   </script>
 </dom-module>
