--- a/src/googleWeb3-Ex.html
+++ b/src/googleWeb3-Ex.html
@@ -1,16 +1,16 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="components/my-googleWebComponents1.html">
+<link rel="import" href="components/googleWeb-Components3.html">
 
-<dom-module id="my-googleWeb1Ex">
+<dom-module id="googleWeb3-Ex">
   <!-- Defines the element's style and local DOM -->
   <template>
-    <my-googleWebComponents1></my-googleWebComponents1>
+    <googleWeb-Components3></googleWeb-Components3>
   </template>
   <!-- Creates the element's prototype and registers it -->
 
   <script>
     Polymer({
-      is: 'my-googleWeb1Ex'
+      is: 'googleWeb3-Ex'
     });
   </script>
 </dom-module>
