--- a/src/paper-Ex.html
+++ b/src/paper-Ex.html
@@ -1,16 +1,16 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="components/my-googleWebComponents2.html">
+<link rel="import" href="components/paper-Comp.html">
 
-<dom-module id="my-googleWeb2Ex">
+<dom-module id="paper-Ex">
   <!-- Defines the element's style and local DOM -->
   <template>
-    <my-googleWebComponents2></my-googleWebComponents2>
+    <paper-Comp></paper-Comp>
   </template>
   <!-- Creates the element's prototype and registers it -->
 
   <script>
     Polymer({
-      is: 'my-googleWeb2Ex'
+      is: 'paper-Ex'
     });
   </script>
 </dom-module>
