--- a/src/my-app.html
+++ b/src/my-app.html
@@ -65,6 +65,9 @@
       <app-drawer>
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+          <a name="DomRepeat-Example" href="/DomRepeat-Example">Dom Repeat Example</a>
+          <a name="DomBind-Example" href="/DomBind-Example">Dom Bind Example</a>
+          <a name="demo-Formulario" href="/demo-Formulario">Form Components Demo</a>
           <a name="googleWeb1-Ex" href="/googleWeb1-Ex">Google Web Components 1</a>
           <a name="googleWeb2-Ex" href="/googleWeb2-Ex">Google Web Components 2</a>
           <a name="googleWeb3-Ex" href="/googleWeb3-Ex">Google Web Components 3</a>
@@ -89,6 +92,9 @@
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
+          <DomRepeat-Example name="DomRepeat-Example"></DomRepeat-Example>
+          <DomBind-Example name="DomBind-Example"></DomBind-Example>
+          <demo-Formulario name="demo-Formulario"></demo-Formulario>
           <googleWeb1-Ex name="googleWeb1-Ex"></googleWeb1-Ex>
           <googleWeb2-Ex name="googleWeb2-Ex"></googleWeb2-Ex>
           <googleWeb3-Ex name="googleWeb3-Ex"></googleWeb3-Ex>
